Update graphcall functions to graph_call and endpoints to graph-call
