# api/demo/routes.py
@@ -71,7 +71,7 @@ def logout():
 
 
 @demo_bp.route("/graph-call", methods=["GET"])
-def graphcall():
+def graph_call():
     token = _get_token_from_cache(env.config.get("MS_GRAPH_PERMISSIONS_SCOPE"))
     if not token:
         return redirect(url_for("demo_bp.login"))
